# scholarship-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  web_app.py
config/: ai_patterns.json  settings.json
data/: posts.json
src/: __init__.py  agent.py  chat_agent.py  config.py  cv_extractor.py  discovery.py  email_sender.py  humanizer.py  hybrid_llm.py  intent_detector.py  ocr_processor.py  rag_store.py  resource_loader.py  writer.py
