[project]
name = "scholarship-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.19"
dependencies = [
    "accelerate>=0.27.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "bitsandbytes>=0.43.0",
    "groq>=1.5.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "streamlit>=1.30.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
